--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:supabase": "node verifySupabaseCRUD.js",
+    "verify:supabase": "node verifySupabaseCRUD.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
